--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% endblock %}
     </head>
     <body>
+        {% block nav %} {% include "__navbar.html.twig" %} {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
