adding ajax paginator

--- a/templates/meeting/showAll.html.twig
+++ b/templates/meeting/showAll.html.twig
@@ -13,17 +13,18 @@
 
 <a href="{{path('app_meeting_add')}}" class='btn'>Créer un rendez-vous</a>
 <div id='searchContainer'>
-<h3>Chercher un rendez-vous :</h3>
-<form action="{{path('app_meeting_search')}}" method='POST' id='searchForm'>
-<input type="text" name="meetingName" placeholder='Par nom'>
-<input type="text" name="meetingPlace" placeholder='Par lieu'>
-<label for="meetingStartDate">Par date de début</label>
-<input type="datetime-local" step="1" name="meetingStartDate">
-<label for="meetingEndDate">Par date de fin</label>
-<input type="datetime-local" name="meetingEndDate">
-<label for="meetingPriority">Par priorité</label>
-<input type="number" max='3' min='0' name='meetingPriority'>
-<input type="submit" value="Chercher" id='searchBtn'>
+    <h3>Chercher un rendez-vous :</h3>
+    <form action="{{path('app_meeting_search')}}" method='GET' id='searchForm'>
+        <input type="text" name="meetingName" placeholder='Par nom'>
+        <input type="text" name="meetingPlace" placeholder='Par lieu'>
+        <label for="meetingStartDate">Par date de début</label>
+        <input type="datetime-local" step="1" name="meetingStartDate">
+        <label for="meetingEndDate">Par date de fin</label>
+        <input type="datetime-local" name="meetingEndDate">
+        <label for="meetingPriority">Par priorité</label>
+        <input type="number" max='3' min='0' name='meetingPriority'>
+        <br>
+    <input type="submit" value="Chercher" id='searchBtn'>
 </form>
 </div>
 
