--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -236,3 +236,10 @@ h2,h3{
     color: red;
     margin: 0.5em auto;
 }
+
+#searchBtn{
+    width: 20%;
+    margin-top: 1em;
+    padding: 1em;
+    border-radius: 10px;
+}
